FIX: ProductsCard crashed if the product name was too long

--- a/src/components/molecules/card/ProductCard/ProductCard.module.scss
+++ b/src/components/molecules/card/ProductCard/ProductCard.module.scss
@@ -9,7 +9,8 @@
     // width: 100%;
     width: 260px;
     // min-width: 200px;
-    max-height: 310px;
+    // max-height: 310px;
+    height: 310px;
     background-color:$white-color;
     display: flex;
     flex-direction: column;
@@ -41,6 +42,16 @@
 
     }
 
+    ._imgContainer{
+        display: flex;
+        align-items:center;
+        justify-content: center;
+        img{
+            width:185px;
+        }
+    }
+
+
     ._label{
         position: absolute;
         left: 10px;
@@ -62,6 +73,12 @@
         font-size: $body-small;
         font-weight: $regular;
         color:$grey-4;
+        height: 55px;
+        display: -webkit-box; 
+        -webkit-line-clamp: 2;       
+        -webkit-box-orient: vertical;
+        overflow: hidden;            
+        text-overflow: ellipsis;     
     }
 
     ._container{
